--- a/index.html
+++ b/index.html
@@ -60,15 +60,14 @@
               "reservationUrl": "https://www.moradaancestral.com/reservas/"
             }
                 </script>
-    <!-- Google tag (gtag.js) -->
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-4HZ3DGMWB0"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L5V3ZNCXB7"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-4HZ3DGMWB0');
+  gtag('config', 'G-L5V3ZNCXB7');
 </script>
         <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.gstatic.com">
